# structured-output-gemini-compute-use

./: .gitignore  README.md  agent.py  client.py  main.py  pyproject.toml  requirements.txt
